# takopod

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  PIPELINE-HELPER.md  README.md  SYSTEM_GUIDE.md  issues.md  main.py  model-selector-demo.webm  pyproject.toml
.playwright-cli/: page-2026-04-23T19-24-51-260Z.yml  page-2026-04-23T19-30-20-983Z.yml  page-2026-04-23T19-32-02-393Z.yml  page-2026-04-23T19-37-01-109Z.yml  page-2026-04-23T19-42-17-094Z.yml  page-2026-04-23T20-24-30-283Z.yml
agent_templates/common_skills/: schedule.md
agent_templates/default/: BOOTSTRAP.md  CLAUDE.md  MEMORY.md  SOUL.md
agent_templates/github/: CLAUDE.md  MEMORY.md  SOUL.md
agent_templates/jira/: CLAUDE.md  MEMORY.md  SOUL.md
bob/: github_claude.md  slack_claude.md
integrations/: cli_base.py  github_mcp.py  gws_mcp.py  jira_mcp.py  slack_mcp.py
orchestrator/: boot_recovery.py  cli.py  cli_permissions.py  cli_registry.py  container_manager.py  db.py  gh_approval.py  gh_permissions.py  github_routes.py  gws_routes.py  ipc.py  jira_permissions.py  main.py  mcp_manager.py  mcp_seed.py  model_registry.py  models.py  oauth.py  oauth_routes.py  ollama.py  routes.py  scheduler.py  search_routes.py  settings.py  slack_poller.py  slack_routes.py  stream_reader.py  ws_manager.py
skills/: review-pr.md
skills/github/: SKILL.md
tests/: conftest.py  test_memory_tools.py
web/: index.html  package-lock.json  package.json  vite.config.ts
worker/: Containerfile  agent.py  context_budget.py  db.py  embed.py  memory.py  model_config.py  search.py  stub_worker.py  worker.py
(+104 files in other folders)
